; ModuleID = '/home/carl/AnghaBench/linux/drivers/media/platform/cec-gpio/extr_cec-gpio.c_cec_gpio_read_5v.c'
source_filename = "/home/carl/AnghaBench/linux/drivers/media/platform/cec-gpio/extr_cec-gpio.c_cec_gpio_read_5v.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.cec_adapter = type { i32 }
%struct.cec_gpio = type { i32 }

@ENOTTY = common dso_local global i32 0, align 4
@llvm.used = appending global [1 x i8*] [i8* bitcast (i32 (%struct.cec_adapter*)* @cec_gpio_read_5v to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i32 @cec_gpio_read_5v(%struct.cec_adapter* %0) #0 {
  %2 = alloca i32, align 4
  %3 = alloca %struct.cec_adapter*, align 8
  %4 = alloca %struct.cec_gpio*, align 8
  store %struct.cec_adapter* %0, %struct.cec_adapter** %3, align 8
  %5 = load %struct.cec_adapter*, %struct.cec_adapter** %3, align 8
  %6 = call %struct.cec_gpio* @cec_get_drvdata(%struct.cec_adapter* %5)
  store %struct.cec_gpio* %6, %struct.cec_gpio** %4, align 8
  %7 = load %struct.cec_gpio*, %struct.cec_gpio** %4, align 8
  %8 = getelementptr inbounds %struct.cec_gpio, %struct.cec_gpio* %7, i32 0, i32 0
  %9 = load i32, i32* %8, align 4
  %10 = icmp ne i32 %9, 0
  br i1 %10, label %14, label %11

11:                                               ; preds = %1
  %12 = load i32, i32* @ENOTTY, align 4
  %13 = sub nsw i32 0, %12
  store i32 %13, i32* %2, align 4
  br label %19

14:                                               ; preds = %1
  %15 = load %struct.cec_gpio*, %struct.cec_gpio** %4, align 8
  %16 = getelementptr inbounds %struct.cec_gpio, %struct.cec_gpio* %15, i32 0, i32 0
  %17 = load i32, i32* %16, align 4
  %18 = call i32 @gpiod_get_value(i32 %17)
  store i32 %18, i32* %2, align 4
  br label %19

19:                                               ; preds = %14, %11
  %20 = load i32, i32* %2, align 4
  ret i32 %20
}

declare dso_local %struct.cec_gpio* @cec_get_drvdata(%struct.cec_adapter*) #1

declare dso_local i32 @gpiod_get_value(i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
